--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.formInput {
+  height: 40px;
+  border-radius: 0.375rem;
+  border-color: rgba(255, 255, 255, 0.15);
+  padding: 0.5rem;
+}
